<resources>
    <string name="app_name">Book Search</string>
    <string name="setting_sort">setting_sort</string>
    <string name="setting_sort_title">Default sort/filter method</string>
    <string name="no_sort">no_sort</string>
    <string name="sort">Sort Setting</string>
    <string name="setting">Setting</string>
    <string name="setting_language">setting_language</string>
    <string name="setting_language_title">Default language for filter</string>
    <string name="en">en</string>
    <string name="setting_number_of_result">number_of_result</string>
    <string name="setting_number_of_result_title">Default number of search books</string>
    <string name="m20">20</string>
    <string name="about_text">
        This application is one of the project of the nanodegree course Networking.
        \nAuthor: L3I2</string>
    <string name="pdf_yes">Available in pdf: yes</string>
    <string name="pdf_no">Available in pdf: no</string>
    <string name="ebook_yes">Ebook: yes</string>
    <string name="ebook_no">Ebook: no</string>
    <string name="info_link">Information link: Click me</string>
    <string name="preview_link">Preview link: Click me</string>
    <string name="no_infor">no information</string>
    <string name="language">Language:</string>
    <string name="sale">Sale status:</string>
    <string name="no_search">There is no search to refresh</string>
</resources>
