<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="Sort Method">
    <ListPreference
        android:key="@string/setting_sort"
        android:title="@string/setting_sort_title"
        android:defaultValue="@string/no_filter"
        android:entries="@array/sort_methods"
        android:entryValues="@array/sort_methods"></ListPreference>

    <ListPreference
        android:key="@string/setting_language"
        android:title="@string/setting_language_title"
        android:defaultValue="@string/en_label"
        android:entries="@array/language_label"
        android:entryValues="@array/language_label"></ListPreference>

    <ListPreference
        android:key="@string/setting_number_of_result"
        android:title="@string/setting_number_of_result_title"
        android:defaultValue="@string/m20"
        android:entries="@array/numbers"
        android:entryValues="@array/numbers"></ListPreference>

</PreferenceScreen>
